change login paragraph

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -48,9 +48,8 @@
       </div>
       <div class="auth-form">
         <h2 class="text-center">Hola, bienvenido de nuevo</h2>
-        <p>
-          Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para
-          continuar.
+        <p class="text-center m-0">
+          ¿Eres nuevo por aquí? <a href="/" class="link">Crea tu cuenta</a>
         </p>
         <form
           [formGroup]="form"
@@ -93,7 +92,7 @@
               />
               Recordar
             </label>
-            <a href="/">¿Olvidaste tu contraseña?</a>
+            <a href="/" class="link">¿Olvidaste tu contraseña?</a>
           </div>
           <button type="submit" class="btn btn-block">Continuar</button>
         </form>
