finalize login component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -47,7 +47,7 @@
         <h1>Utilidades</h1>
       </div>
       <div class="auth-form">
-        <h2 class="text-center">Hola, bienvenido de nuevo</h2>
+        <h2 class="text-center">Bienvenido de nuevo</h2>
         <p class="text-center m-0">
           ¿Eres nuevo por aquí? <a href="/" class="link">Crea tu cuenta</a>
         </p>
