--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -1,10 +1,13 @@
 :root {
   --gray-100: #f5f8fa;
+  --gray-200: #eff2f5;
   --gray-500: #7e8299;
   --gray-700: #334155;
   --gray-800: #1e293b;
   --purple-100: #f8f5ff;
   --purple-500: #7239ea;
+  --purple-600: #4f46e5;
+  --purple-700: #4338ca;
   --text-color: #181c32;
   --red: #f1416c;
   --animate-duration: 0.6s;
