add input errors

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -59,9 +59,9 @@
           #f="ngForm"
         >
           <div class="form-group">
-            <label for="email" class="f-label required"
-              >Correo electrónico</label
-            >
+            <label for="email" class="f-label required">
+              Correo electrónico
+            </label>
             <input
               type="email"
               id="email"
