implement the global mixins approach

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,176 +1,2 @@
-@use 'styles/colors';
-@use 'styles/mq';
-
-// Root
-// _________________________________________________________________________________________
-@use 'app/shared/scss/root/normalize';
-@use 'app/shared/scss/root/root';
-@use 'app/shared/scss/root/links';
-
-// Layout
-// _________________________________________________________________________________________
-@use 'app/shared/scss/layout/app-header';
-@use 'app/shared/scss/layout/app-footer';
-@use 'app/shared/scss/layout/layout';
-
-// Typography
-// _________________________________________________________________________________________
-@use 'app/shared/scss/typography/headers';
-@use 'app/shared/scss/typography/paragraphs';
-
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  min-height: 100vh;
-}
-body {
-  margin: 0;
-  width: 100vw;
-  font-family: Poppins, Helvetica, 'sans-serif';
-  overflow-x: hidden;
-  color: var(--text-color);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  display: inline-block;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-.d-center,
-.d-between {
-  display: flex;
-  align-items: center;
-}
-
-.d-center {
-  justify-content: center;
-}
-
-.d-between {
-  justify-content: space-between;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.form-group {
-  margin-bottom: 1rem;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.h-100 {
-  height: 100%;
-}
-
-.f-label {
-  display: inline-block;
-  margin-bottom: 0.3rem;
-  font-size: 0.9rem;
-
-  &.required::after {
-    content: '*';
-    color: var(--red);
-    margin-left: 0.3rem;
-  }
-}
-
-.f-control {
-  display: block;
-  width: 100%;
-  padding: 0.825rem 1.2rem;
-  border: 1px solid #ccc;
-  border-radius: 0.425rem;
-  box-sizing: border-box;
-  font-weight: 500;
-  font-size: 1rem;
-  transition: border calc(var(--animate-duration) / 3) ease-in-out;
-  outline: none;
-
-  &:active:not(.invalid-field),
-  &:focus:not(.invalid-field) {
-    border-color: var(--purple-500);
-  }
-}
-
-.btn,
-.btn-light {
-  background-color: var(--purple-600);
-  color: #fff;
-  display: inline-block;
-  padding: 0.825rem 1.3rem;
-  border: none;
-  border-radius: 0.425rem;
-  box-sizing: border-box;
-  font-weight: 500;
-  font-size: 1rem;
-  cursor: pointer;
-  text-align: center;
-  transition: all 0.2s ease-in-out;
-
-  &-block {
-    display: block;
-    width: 100%;
-  }
-
-  &:active,
-  &:focus {
-    outline: none;
-  }
-
-  &:hover {
-    background-color: var(--purple-700);
-  }
-}
-
-.btn-light {
-  background-color: var(--gray-100);
-  color: var(--gray-500);
-
-  &:hover {
-    color: var(--gray-500);
-    background-color: var(--gray-200);
-  }
-}
-
-.link {
-  color: var(--purple-500);
-  cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.invalid-field {
-  border-color: var(--red);
-}
-
-.m-0 {
-  margin: 0;
-}
+@use 'scss/normalize';
+@use 'scss/root';
