--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<header class="header">
+  <div class="header__content">
+    <h1 class="header__title">Styling Angular Applications</h1>
+    <span class="header__sub-title">For Modern Angular Applications</span>
+  </div>
+  <app-navbar-primary></app-navbar-primary>
+</header>
