--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,7 +1,5 @@
-@import 'mq';
-
 .auth {
-  background: var(--gray-800);
+  background: #1e293b;
   position: relative;
   overflow: hidden;
   padding: 1rem;
@@ -10,7 +8,7 @@
   .bg-circles,
   .bg-pattern {
     position: absolute;
-    color: var(--gray-700);
+    color: #334155;
   }
 
   .bg-circles {
