--- a/src/app/shared/scss/root/_colors.scss
+++ b/src/app/shared/scss/root/_colors.scss
@@ -2,40 +2,40 @@
 // _________________________________________________________________________________________
 
 // 01
-$color__primary--01a: #f15b2a;
-$color__primary--01b: #c43b0e;
-$color__primary--01c: #f69c7e;
+$g-root__color--primary--01a: #f15b2a;
+$g-root__color--primary--01b: #c43b0e;
+$g-root__color--primary--01c: #f69c7e;
 
 // 02
-$color__primary--02a: #2a9fbc;
-$color__primary--02b: #1f778d;
-$color__primary--02c: #76cbe0;
+$g-root__color--primary--02a: #2a9fbc;
+$g-root__color--primary--02b: #1f778d;
+$g-root__color--primary--02c: #76cbe0;
 
 // 03
-$color__primary--03a: #404040;
+$g-root__color--primary--03a: #404040;
 
 // Secondary
 // _________________________________________________________________________________________
 
 // 01
-$color__secondary--01a: #a62e5c;
-$color__secondary--01b: #7d2345;
-$color__secondary--01c: #d8739a;
+$g-root__color--secondary--01a: #a62e5c;
+$g-root__color--secondary--01b: #7d2345;
+$g-root__color--secondary--01c: #d8739a;
 
 // 02
-$color__secondary--02a: #8bc850;
-$color__secondary--02b: #77a032;
-$color__secondary--02c: #c3de96;
+$g-root__color--secondary--02a: #8bc850;
+$g-root__color--secondary--02b: #77a032;
+$g-root__color--secondary--02c: #c3de96;
 
 // 03
-$color__secondary--03a: #675ba7;
-$color__secondary--03b: #4d447e;
-$color__secondary--03c: #a49dca;
+$g-root__color--secondary--03a: #675ba7;
+$g-root__color--secondary--03b: #4d447e;
+$g-root__color--secondary--03c: #a49dca;
 
 // 04
-$color__secondary--04a: #171717;
-$color__secondary--04b: #303030;
-$color__secondary--04c: #e5e5e5;
+$g-root__color--secondary--04a: #171717;
+$g-root__color--secondary--04b: #303030;
+$g-root__color--secondary--04c: #e5e5e5;
 
 :root {
   --gray-100: #f5f8fa;
