--- a/src/app/shared/scss/root/_mq.scss
+++ b/src/app/shared/scss/root/_mq.scss
@@ -4,7 +4,7 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 900px;
 $breakpoint-x-lg: 1024px;
 
-@mixin mq($media) {
+@mixin media($media) {
   @if $media == xs {
     @media (min-width: $breakpoint-xs) {
       @content;
