--- a/src/app/shared/components/popups/modal/modal.component.scss
+++ b/src/app/shared/components/popups/modal/modal.component.scss
@@ -15,6 +15,7 @@
   background: colors.$g-root__color--primary--01a;
   border-radius: 0.5em;
   color: white;
+  font-size: 1rem;
   height: 66.7vh;
   left: 50%;
   min-width: 33.3125rem;
