--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,10 @@
 @use 'headers';
 @use 'paragraphs';
 
+:host {
+  font-size: 1rem;
+}
+
 // Header
 .header {
   background: colors.$g-root__color--secondary--04a;
@@ -53,6 +57,30 @@
 
 .content__paragraph {
   @include paragraphs.g-root__paragraph;
+}
+
+// Large Viewports
+@media (min-width: 52rem) {
+  .content__primary {
+    font-size: 1.5em;
+    @include grid.g-layout__grid__item--08;
+  }
+
+  .content__secondary {
+    @include grid.g-layout__grid__item--04;
+  }
+}
+
+// Small Viewports
+@media (max-width: 52rem) {
+  .content__primary {
+    font-size: 1.5em;
+    @include grid.g-layout__grid__item--12;
+  }
+
+  .content__secondary {
+    @include grid.g-layout__grid__item--12;
+  }
 }
 
 // Footer
