--- a/src/app/shared/components/navigation/navbar-secondary/navbar-secondary.component.scss
+++ b/src/app/shared/components/navigation/navbar-secondary/navbar-secondary.component.scss
@@ -13,20 +13,20 @@
 
 .item {
   padding: 0 1em;
-}
 
-.item__link {
-  color: white;
-  cursor: pointer;
-  text-decoration: none;
-}
+  &__link {
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+  }
 
-.item__link:hover {
-  color: white;
-  text-decoration: underline;
-}
+  &__link:hover {
+    color: white;
+    text-decoration: underline;
+  }
 
-// First
-.item:first-child {
-  padding-left: 0;
+  // First
+  &:first-child {
+    padding-left: 0;
+  }
 }
