create compoent themes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,8 @@
         applications.
       </p>
 
+      <app-promo class="color--01"></app-promo>
+
       <app-tabs>
         <app-tabs-pane title="Styles in Angular">
           <p class="content__paragraph">
