validate conditional content display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,22 @@
   <app-navbar-primary></app-navbar-primary>
 </header>
 <div class="content">
+  <app-message class="layout--01">
+    <app-message-title>Your Account is Expiring!</app-message-title>
+    <app-message-content
+      >Your account will expire within the next thirty days. Please update your
+      payment method in your account.</app-message-content
+    >
+  </app-message>
+
+  <app-message class="layout--02">
+    <app-message-title>Your Account is Expiring!</app-message-title>
+    <app-message-content
+      >Your account will expire within the next thirty days. Please update your
+      payment method in your account.</app-message-content
+    >
+  </app-message>
+
   <div class="content__sections">
     <div class="content__primary">
       <h2 class="content__title">Styles in Angular?</h2>
