use custom properties

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,6 @@
   <app-navbar-primary></app-navbar-primary>
 </header>
 <div class="content">
-  <app-message class="layout--01">
-    <app-message-title>Your Account is Expiring!</app-message-title>
-    <app-message-content
-      >Your account will expire within the next thirty days. Please update your
-      payment method in your account.</app-message-content
-    >
-  </app-message>
-
-  <app-message class="layout--02">
-    <app-message-title>Your Account is Expiring!</app-message-title>
-    <app-message-content
-      >Your account will expire within the next thirty days. Please update your
-      payment method in your account.</app-message-content
-    >
-  </app-message>
-
   <div class="content__sections">
     <div class="content__primary">
       <h2 class="content__title">Styles in Angular?</h2>
@@ -99,6 +83,31 @@
               </app-tabs-pane>
             </app-tabs>
           </app-modal-content>
+        </app-modal>
+      </p>
+
+      <p class="content__paragraph">
+        <app-modal class="color--03">
+          <strong>Click here to learn More!</strong>
+          <app-modal-content>
+            <h1>Styling Angular Applications</h1>
+            <app-message class="layout--02">
+              <app-message-title>Your Account is Expiring!</app-message-title>
+              <app-message-content
+                >Your account will expire within the next thirty days. Please
+                update your payment method in your account.</app-message-content
+              >
+            </app-message>
+          </app-modal-content>
+          <app-modal-highlight>
+            <app-message class="layout--02">
+              <app-message-title>Offer Ends Soon!</app-message-title>
+              <app-message-content
+                >Act fast and renew your account in the next five days to
+                recieve 20% off!</app-message-content
+              >
+            </app-message>
+          </app-modal-highlight>
         </app-modal>
       </p>
 
