--- a/src/app/shared/components/popups/modal/modal.component.html
+++ b/src/app/shared/components/popups/modal/modal.component.html
@@ -6,5 +6,14 @@
   <a (click)="toggleOpenClose()" class="modal__close"> close </a>
   <div class="modal__content">
     <ng-content select="app-modal-content"></ng-content>
+    <div class="modal__highlight">
+      <p>
+        Angular revolutionizes the way that you architect CSS for modern web
+        applications. But before you can become Angular styling ninjas, you need
+        to take a step back and consider the many different ways that things can
+        be done.
+      </p>
+      <ng-content select="app-modal-highlight"></ng-content>
+    </div>
   </div>
 </div>
