--- a/src/app/standalone/standalone.component.html
+++ b/src/app/standalone/standalone.component.html
@@ -1,1 +1,3 @@
-<p>standalone works!</p>
+<h1>Standalone Components</h1>
+<app-navbar-primary></app-navbar-primary>
+<app-data-table></app-data-table>
