--- a/src/app/reactive-dev/products/product-list/product-list.component.html
+++ b/src/app/reactive-dev/products/product-list/product-list.component.html
@@ -1,9 +1,28 @@
+<div class="alert" *ngIf="errorMessage">
+  <span>{{ errorMessage }}</span>
+</div>
+
 <div class="products">
-  <h1>Products</h1>
-  <div class="product" *ngFor="let product of products">
-    <img [src]="product.image" [alt]="product.title" />
-    <h3>{{ product.title }}</h3>
-    <p>{{ product.description }}</p>
-    <span>{{ product.price }}</span>
+  <div class="products__actions">
+    <mat-form-field appearance="standard">
+      <mat-label>Filter by category</mat-label>
+      <mat-select [formControl]="selected">
+        <mat-option value="all">Display All</mat-option>
+        <mat-option *ngFor="let category of categories" [value]="category">
+          {{ category | titlecase }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary">Add product</button>
+  </div>
+  <div class="product__list">
+    <figure class="product" *ngFor="let product of products">
+      <img [src]="product.image" [alt]="product.title" class="product__img" />
+      <figcaption>
+        <h3 class="product__title">{{ product.title }}</h3>
+        <span class="product__price">{{ product.price | currency }}</span>
+      </figcaption>
+    </figure>
   </div>
 </div>
