use declarative pattern, async pipe and handle errors

--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
@@ -2,7 +2,7 @@
   {{ errorMessage }}
 </div>
 
-<div class="products" *ngIf="products">
+<div class="products" *ngIf="products$ | async as products">
   <button
     *ngFor="let product of products"
     [ngClass]="{ active: product?.id === selectedProductId }"
