--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
@@ -8,6 +8,6 @@
     [ngClass]="{ active: product?.id === selectedProductId }"
     (click)="onSelected(product.id)"
   >
-    {{ product.title }} - {{ product.category }}
+    {{ product.title }}
   </button>
 </div>
