create user section

--- a/src/app/reactive-dev/reactive-dev.component.html
+++ b/src/app/reactive-dev/reactive-dev.component.html
@@ -26,8 +26,8 @@
     <nav>
       <ul class="nav__items">
         <li class="nav__item">
-          <a class="nav__link" routerLink="/reactive/welcome" routerLinkActive="nav__link--active">
-            Welcome
+          <a class="nav__link" routerLink="/reactive/users" routerLinkActive="nav__link--active">
+            Users
           </a>
         </li>
         <li class="nav__item">
