--- a/src/app/reactive-dev/users/users.component.html
+++ b/src/app/reactive-dev/users/users.component.html
@@ -24,7 +24,7 @@
 
     <ng-container matColumnDef="cart">
       <th mat-header-cell *matHeaderCellDef>Cart</th>
-      <td mat-cell *matCellDef="let element">0</td>
+      <td mat-cell *matCellDef="let element">{{ element.cart }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
