--- a/src/app/reactive-dev/products/product-list/product-list.component.html
+++ b/src/app/reactive-dev/products/product-list/product-list.component.html
@@ -6,9 +6,9 @@
   <div class="products__actions">
     <mat-form-field appearance="standard">
       <mat-label>Filter by category</mat-label>
-      <mat-select [formControl]="selected">
-        <mat-option value="all">Display All</mat-option>
-        <mat-option *ngFor="let category of categories" [value]="category">
+      <mat-select [formControl]="selected" (valueChange)="onSelected($event)">
+        <mat-option [value]="defaultCategory">Display All</mat-option>
+        <mat-option *ngFor="let category of categories$ | async" [value]="category">
           {{ category | titlecase }}
         </mat-option>
       </mat-select>
