create product detail

--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
@@ -4,6 +4,7 @@
 
 <div class="products" *ngIf="products$ | async as products">
   <button
+    mat-stroked-button
     *ngFor="let product of products"
     [ngClass]="{ active: product?.id === selectedProductId }"
     (click)="onSelected(product.id)"
