--- a/src/app/reactive-dev/products/product-list-alt/detail/detail.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/detail/detail.component.html
@@ -1,1 +1,10 @@
-<p>detail works!</p>
+<div class="product" *ngIf="product$ | async as product">
+  <img [src]="product.image" [alt]="product.title" />
+  <div class="product__description">
+    <h2>{{ product.title }}</h2>
+    <p>{{ product.description }}</p>
+    <p>Votes: {{ product.rating.count }} - Rating: {{ product.rating.rate }}</p>
+    <p>Category: {{ product.category }}</p>
+    <b>${{ product.price }}</b>
+  </div>
+</div>
