react to selection: action stream

--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
@@ -6,7 +6,7 @@
   <button
     mat-stroked-button
     *ngFor="let product of products"
-    [ngClass]="{ active: product?.id === selectedProductId }"
+    [ngClass]="{ active: product?.id === (selectedProduct$ | async)?.id }"
     (click)="onSelected(product.id)"
   >
     {{ product.title }}
