--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.scss
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.scss
@@ -3,4 +3,9 @@ button {
   text-overflow: ellipsis;
   overflow: hidden;
   text-align: left;
+
+  &.active {
+    background-color: #000;
+    color: #fff;
+  }
 }
