fix error message display

--- a/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
+++ b/src/app/reactive-dev/products/product-list-alt/product-list-alt.component.html
@@ -1,4 +1,4 @@
-<div class="alert" *ngIf="errorMessage">
+<div class="alert" *ngIf="errorMessage$ | async as errorMessage">
   {{ errorMessage }}
 </div>
 
