improve performance using merge and scan

--- a/src/app/reactive-dev/products/product-list/product-list.component.html
+++ b/src/app/reactive-dev/products/product-list/product-list.component.html
@@ -14,7 +14,7 @@
       </mat-select>
     </mat-form-field>
 
-    <button mat-raised-button color="primary">Add product</button>
+    <button mat-raised-button color="primary" (click)="onAddProduct()">Add product</button>
   </div>
   <div class="product__list" *ngIf="products$ | async as products">
     <figure class="product" *ngFor="let product of products">
