add layout styles

--- a/src/app/reactive-heroes/heroes/heroes.component.html
+++ b/src/app/reactive-heroes/heroes/heroes.component.html
@@ -1,1 +1,4 @@
-<p>heroes works!</p>
+<h1 class="bungee">Welcome to NG Workshop!</h1>
+<main class="content">
+  <router-outlet></router-outlet>
+</main>
