add pages and limit counter

--- a/src/app/reactive-heroes/heroe-table/heroe-table.component.html
+++ b/src/app/reactive-heroes/heroe-table/heroe-table.component.html
@@ -1,10 +1,10 @@
 <div class="tool-bar">
   <span class="search-tool">
     <label for="heroSearch">Search:</label>
-    <input name="heroSearch" (input)="doSearch($event)" />
+    <input name="heroSearch" [value]="search$ | async" (input)="doSearch($event)" />
   </span>
   <span class="page-tool">
-    <label>Page ? of ? : </label>
+    <label>Page {{ currentPage$ | async }} of {{ totalPages$ | async }} : </label>
     <span class="buttons">
       <button class="prev">Prev</button>
       <button class="next">Next</button>
@@ -19,7 +19,7 @@
     </span>
   </span>
   <span class="total-tool">
-    <label>Total Results: ???</label>
+    <label>Total Results: {{ totalResults$ | async }}</label>
   </span>
 </div>
 <div class="table-content">
